fix #welcome alignment/responsiveness

--- a/backend/seeds/static/seeds/styles.css
+++ b/backend/seeds/static/seeds/styles.css
@@ -9,6 +9,7 @@
     --button-size: 3rem;
     --border: 0.03rem solid #474a4d;
     --structure-br: 2%;
+    --demo-br: .5rem;
     --content-br: 50%;
     --speed: 500ms;
     --menu-item-font-size: 1rem;
@@ -57,9 +58,11 @@ body {
 }
 
 #welcome {
-    min-height: 90vh;
+    height: 80vh;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
     gap: 1rem;
 }
 
@@ -68,7 +71,12 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 68vh;
+    /* height: 68vh; */
+    width: 90%;
+}
+
+#demo iframe {
+    border-radius: var(--demo-br);
 }
 
 #instructions {
@@ -463,7 +471,10 @@ audio {
     #intro {
         gap: 5rem;
     }
-}
+
+    #welcome {
+        height: 85vh;
+    }
 
 /* breadcrumb nav */
 #breadcrumbs {
